// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots app/pages/collectivite/AuditSuivi/FiltreOrdreDuJour Selection 1`] = `
<button
  aria-expanded={false}
  aria-label="ouvrir le menu"
  className="flex items-center w-full p-2 text-left text-sm"
  onClick={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onPointerDown={[Function]}
  type="button"
>
  <span
    className="fr-fi--sm w-full text-center text-bf500 font-bold mt-1 fr-fi-filter-fill"
  >
     
    A discuter - Séance d'audit
  </span>
  <span
    className="ri-arrow-down-s-line font-normal text-center h-6 w-6 text-[1.5rem] leading-[1.5rem] flex mt-1 ml-auto"
  />
</button>
`;

exports[`Storyshots app/pages/collectivite/AuditSuivi/FiltreOrdreDuJour Tous 1`] = `
<button
  aria-expanded={false}
  aria-label="ouvrir le menu"
  className="flex items-center w-full p-2 text-left text-sm"
  onClick={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onPointerDown={[Function]}
  type="button"
>
  <span
    className="fr-fi--sm w-full text-center text-bf500 font-bold mt-1 fr-fi-filter-line"
  >
     
    A discuter - Séance d'audit
  </span>
  <span
    className="ri-arrow-down-s-line font-normal text-center h-6 w-6 text-[1.5rem] leading-[1.5rem] flex mt-1 ml-auto"
  />
</button>
`;
